--- a/settings.gradle
+++ b/settings.gradle
@@ -15,3 +15,5 @@ dependencyResolutionManagement {
 rootProject.name = "Rick & Morty Episode Data"
 include ':app'
 include ':domain'
+include ':data'
+include ':presentation'
